Resizing a rectangle that is already in the document will update it in the document too.

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,6 @@
 	</build>
 
   <modules>
-    <module>digital-facsimile-plugin</module>
+    <module>image-markup-plugin</module>
   </modules>
 </project>
