--- a/digital-facsimile-plugin/pom.xml
+++ b/digital-facsimile-plugin/pom.xml
@@ -9,8 +9,8 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>digital-facsimile-plugin</artifactId>
-	<name>digital-facsimile-plugin</name>
+	<artifactId>image-markup-plugin</artifactId>
+	<name>image-markup-plugin</name>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
