--- a/digital-facsimile-plugin/pom.xml
+++ b/digital-facsimile-plugin/pom.xml
@@ -15,6 +15,90 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+	<profiles>
+	<profile>
+      <id>auto-install</id>
+      <activation>
+        <property>
+          <name>oxygen.plugins.dir</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.9</version>
+            <executions>
+              <execution>
+                <id>unpack</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>${project.groupId}</groupId>
+                      <artifactId>${project.artifactId}</artifactId>
+                      <version>${project.version}</version>
+                      <classifier>plugin</classifier>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${oxygen.plugins.dir}</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          
+          
+          <!-- ============================= MAVEN CLEAN PLUGIN ============================= -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.4.1</version>
+            <executions>
+              <execution>
+                <id>delete-old-content</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+                <configuration>
+                  <followSymLinks>false</followSymLinks>
+                  <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                  <filesets>
+                    <fileset>
+                      <directory>${oxygen.plugins.dir}/${project.artifactId}-${project.version}</directory>
+                    </fileset>
+                  </filesets>
+                </configuration>
+              </execution>
+              <execution>
+                <id>delete-META-INF</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+                <configuration>
+                  <followSymLinks>false</followSymLinks>
+                  <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                  <filesets>
+                    <fileset>
+                      <directory>${oxygen.plugins.dir}/META-INF</directory>
+                    </fileset>
+                  </filesets>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+	</profiles>
 
 	<build>
 		<plugins>
@@ -37,38 +121,61 @@
 				</executions>
 			</plugin>
 			
+			<!-- Copy the latest add-on package -->
 			<plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.3</version>
-            <dependencies>
-              <dependency>
-                <groupId>ant</groupId>
-                <artifactId>ant-nodeps</artifactId>
-                <version>1.6.5</version>
-              </dependency>
-            </dependencies>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.9</version>
             <executions>
-              <!-- Create the directories needed by later phases -->
               <execution>
-                <id>generate-tmp-directory-structure</id>
+                <id>copy-addon</id>
                 <phase>install</phase>
                 <goals>
-                  <goal>run</goal>
+                  <goal>copy</goal>
                 </goals>
                 <configuration>
-                  <tasks>
-                    <!-- Remove the previous deployed -->
-                    <property name="oxygen.install.dir" value="D:/projects/eXml/"/>
-                    
-                    <delete dir="${oxygen.install.dir}/plugins/${project.build.finalName}-plugin"/>
-                    
-                    <unzip src="target/${project.build.finalName}-plugin.jar" dest="${oxygen.install.dir}/plugins" />
-                    <delete dir="${oxygen.install.dir}/plugins/META-INF"/>
-                  </tasks>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>${project.groupId}</groupId>
+                      <artifactId>${project.artifactId}</artifactId>
+                      <version>${project.version}</version>
+                      <classifier>plugin</classifier>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${build.dir}/../../addon</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
                 </configuration>
               </execution>
             </executions>
           </plugin>
+          
+          
+          <!-- ============================= MAVEN CLEAN PLUGIN ============================= -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.4.1</version>
+            <executions>
+              <execution>
+                <id>delete-old-content</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+                <configuration>
+                  <followSymLinks>false</followSymLinks>
+                  <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                  <filesets>
+                    <fileset>
+                      <directory>${build.dir}/../../addon/${project.artifactId}-${project.version}</directory>
+                    </fileset>
+                  </filesets>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+			
           <plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
 	        <artifactId>maven-compiler-plugin</artifactId>
